# zarya

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md
.cursor/rules/: static-build.mdc  trunk-based-git.mdc
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config_validation.yml  diagnostics_issue.yml  experimental_tun_issue.yml  feature_request.yml  security.md
.github/workflows/: build.yml  release.yml
cmake/: ZaryaBuildInfo.cmake  ZaryaDeploy.cmake  ZaryaQt.cmake  ZaryaQtPaths.cmake  ZaryaTranslations.cmake  ZaryaVersion.cmake
docs/: AGENTS.md  backup-import-export.md  beta-bug-triage.md  beta-regression-checklist.md  beta-release-checklist.md  beta-todo-audit.md  core-update-manager.md  diagnostics-bundle.md  kill-switch-design.md  known-limitations.md  localization.md  platform-test-matrix.md  privileged-helper-design.md  recovery.md  release-packaging.md  security-model.md  sing-box-rule-sets.md  tun-design.md  windows-wfp-kill-switch.md
docs/installer/: README.md  helper-service-installation.md  installed-layout.md  installer-security.md  linux-packaging-strategy.md  macos-installer-strategy.md  portable-to-installed-migration.md  uninstall-repair.md  windows-installer-strategy.md  windows-msi-poc.md
docs/public-beta/: README.md  beta-blockers.md  beta-checklist.md  download-verification.md  experimental-features.md  feedback-triage.md  known-limitations.md  privacy-and-diagnostics.md  quick-start.md  reporting-issues.md  security.md
docs/rc/: rc-blockers.md  rc-go-no-go.md  rc-known-issues.md  rc-regression-matrix.md  rc-release-process.md  rc-scope.md
docs/release/: README.md  blockers.md  go-no-go.md  known-issues.md  recovery-audit.md  regression-matrix.md  release-process.md  release-scope.md
docs/release-checks/: 0.30-regression.md
docs/release-drafts/: github-release-0.29.0-beta.md  github-release-0.30.0-beta.md  github-release-0.36.0-rc1.md  github-release-1.0.0.md
docs/release-notes/: 0.23-beta.md  0.24-localization.md  0.25-beta.md  0.26-beta.md  0.27-beta.md  0.28-beta.md  0.29-beta.md  0.30-beta.md  0.31-beta.md  0.32-beta.md  0.33-beta.md  0.34-beta.md  0.35-beta.md  0.36-rc1.md  1.0.0.md
docs/service/: README.md  helper-recovery.md  helper-security-model.md  linux-systemd-polkit.md  macos-smappservice.md  windows-helper-service.md
docs/signing/: README.md  key-management.md  linux-signing.md  macos-signing-notarization.md  release-verification.md  windows-authenticode.md
docs/stable/: 1.0-backlog.md  1.0.0-go-no-go.md  README.md  feature-gating.md  go-no-go-checklist.md  regression-matrix.md  release-criteria.md  risk-register.md  stable-scope.md
docs/updater/: README.md  helper-update.md  installed-update-flow.md  portable-update-flow.md  portable-update-implementation.md  recovery.md  update-manifest.md  updater-security.md
examples/: README.md  profiles-vless-reality.sample.json  sub-plain.txt  xray-vless-reality.sample.json
packaging/linux/: appimage-notes.md  zarya.desktop.in
packaging/macos/: bundle-notes.md
packaging/metadata/: app-id.txt  app-name.txt  copyright.txt  homepage.txt  vendor.txt
packaging/windows/: cores-sing-box-README.txt  cores-xray-README.txt  installer-notes.md  portable-layout.md
scripts/: AGENTS.md  audit-redaction.py  build-qt-static-msvc2026.ps1  build.ps1  check-translations.py  configure-msvc2026.ps1  fill-ru-translations.py  generate-update-manifest.py  generate-wix-components.py  github-labels.md  package-linux.sh  package-macos.sh  package-windows-msi.ps1  package-windows.ps1  release_common.py  ru_translations.json  run-smoke-tests.py  run-xray-config-test.ps1  sign-linux.sh  sign-macos.sh  sign-windows.ps1  smoke-linux.sh  smoke-package.py  smoke-windows-msi.ps1  smoke-windows.ps1  verify-release-artifacts.py
src/: AGENTS.md
src/app/: AppController.cpp  AppController.h  Application.cpp  Application.h  BuildInfo.cpp  BuildInfo.h  BuildInfo_config.h.in  StartupOptions.cpp  StartupOptions.h  main.cpp
src/backup/: BackupArchive.cpp  BackupArchive.h  BackupCategory.cpp  BackupCategory.h  BackupExportOptions.cpp  BackupExportOptions.h  BackupExporter.cpp  BackupExporter.h  BackupImportOptions.cpp  BackupImportOptions.h  BackupImporter.cpp  BackupImporter.h  BackupManager.cpp  BackupManager.h  BackupManifest.cpp  BackupManifest.h  BackupRedactor.cpp  BackupRedactor.h  BackupValidator.cpp  BackupValidator.h
src/core/: AGENTS.md  CoreManager.cpp  CoreManager.h  ICoreAdapter.h  SingBoxAdapter.cpp  SingBoxAdapter.h  XrayAdapter.cpp  XrayAdapter.h  XrayConfigBuilder.cpp  XrayConfigBuilder.h  XrayConfigTestHelpers.cpp  XrayConfigTestHelpers.h  XrayStreamSettings.cpp  XrayStreamSettings.h  XrayVlessGenerator.cpp  XrayVlessGenerator.h
src/cores/: AGENTS.md  CoreArchiveExtractor.cpp  CoreArchiveExtractor.h  CoreAsset.h  CoreAssetSelector.cpp  CoreAssetSelector.h  CoreBinaryManager.cpp  CoreBinaryManager.h  CoreChecksum.cpp  CoreChecksum.h  CoreDownloader.cpp  CoreDownloader.h  CoreInfo.h  CoreInstallStatus.cpp  CoreInstallStatus.h  CoreInstaller.cpp  CoreInstaller.h  CorePaths.cpp  CorePaths.h  CorePlatform.cpp  CorePlatform.h  CoreRelease.h  CoreReleaseProvider.cpp  CoreReleaseProvider.h  CoreRollbackManager.cpp  CoreRollbackManager.h  CoreVerifier.cpp  CoreVerifier.h  CoreVersionDetector.cpp  CoreVersionDetector.h  DetectedVersion.h  GitHubReleaseProvider.cpp  GitHubReleaseProvider.h
src/diagnostics/: DiagnosticsBundleWriter.cpp  DiagnosticsBundleWriter.h  DiagnosticsCategory.cpp  DiagnosticsCategory.h  DiagnosticsCollector.cpp  DiagnosticsCollector.h  DiagnosticsContext.h  DiagnosticsManager.cpp  DiagnosticsManager.h  DiagnosticsManifest.cpp  DiagnosticsManifest.h  DiagnosticsOptions.cpp  DiagnosticsOptions.h  DiagnosticsRedactor.cpp  (+5 more)
tests/: geodata_verifier_test.cpp  singbox_config_test.cpp  subscription_test.cpp  system_proxy_test.cpp  testing_test.cpp  version_test.cpp  xray_config_test.cpp
translations/: zarya_en.ts  zarya_ru.qm  zarya_ru.ts
(+444 files in other folders)
